test/syntax/fail/merge_constructor_not_in_enum.sync
type s0 = S0
type s1 = S1

let f (s : s0) =
  merge s (S1 -> 0)
